--- a/styles.css
+++ b/styles.css
@@ -33,8 +33,16 @@
 }
 .buttons{
 }
-.btnSquare{
+.btnSquare{ 
     margin: 5px;
+    border-radius: .6rem;
+    background-color: aliceblue;
+    padding-right: 10px;
+    padding-left: 10px;
+}
+#restartGame { 
+    margin: 10px;
+    margin-right: 40px;
     border-radius: .6rem;
     background-color: aliceblue;
     padding-right: 10px;
