--- a/styles.css
+++ b/styles.css
@@ -1,13 +1,23 @@
-*{
+html{
     box-sizing: border-box;
     background-color: rgb(31, 35, 31);
     margin: 0;
     font-family: 'Plus Jakarta Sans', sans-serif;
     font-family: 'Roboto Mono', monospace;
 }
+body{
+    margin: 0;
+}
 .header{
     text-align: center;
-
+    background-color: rgba(240, 248, 255, 0.163);
+    font-size: 2rem;
+}
+#headerText{
+    padding-block: 20px;
+    margin-top: 0;
+    color: aliceblue;
+    letter-spacing: .9rem;
 }
 .container {
     display: flex;
@@ -31,22 +41,80 @@
 .scoreContainer{
     display: flex;
     flex-direction: row;
-    gap: 20px;
+    gap: 150px;
     padding-top: 20px;
 }
 
-.btnSquare{ 
+/* .btnSquare{ 
     margin: 5px;
     border-radius: .6rem;
     background-color: rgba(240, 248, 255, 0.474);
     padding-right: 10px;
     padding-left: 10px;
-}
+    background-color: rgb(31, 35, 31);
+    color: rgb(144, 146, 148);
+    border: solid 2px;
+    width: 150px;
+    height: 100px;
+} */
 #restartGame { 
     margin: 10px;
-    margin-right: 40px;
-    border-radius: .6rem;
-    background-color: aliceblue;
-    padding-right: 10px;
-    padding-left: 10px;
+    /* border-radius: .6rem; */
+    background-color: rgb(31, 35, 31);
+}
+.footerText{
+    text-align: end;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    background-color: rgba(240, 248, 255, 0.163);
+    padding-block: 15px;
+    color: aliceblue;
+    padding-right: 20px;
+}
+button {
+  padding: 0.1em 0.25em;
+  width: 11.5em;
+  height: 4.2em;
+  background-color: #2121211c;
+  border: 0.08em solid #fff;
+  border-radius: 0.3em;
+  font-size: 12px;
+  cursor: pointer;
+}
+
+button span {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  bottom: 0.4em;
+  width: 7.25em;
+  height: 2.5em;
+  background-color: #212121;
+  border-radius: 0.2em;
+  font-size: 1.5em;
+  color: #ffffff61;
+  border: 0.08em solid #ffffffc9;
+  box-shadow: 0 0.4em 0.1em 0.019em #ffffff63;
+}
+
+button span:hover {
+  transition: all 0.5s;
+  transform: translate(0, 0.4em);
+  box-shadow: 0 0 0 0 #fff;
+}
+
+button span:not(hover) {
+  transition: all 1s;
+}
+.btnSquare{
+    margin: 8px;
+}
+@media (max-width: 430px) {
+    .buttons {
+        display: flex;
+        flex-direction: column;
+    }
 }
