--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,9 @@ body{
     border: solid 1px white;
     border-radius: .6rem;
 }
+#scoreInfo{
+    font-size: 1.8rem;
+}
 .scoreContainer{
     display: flex;
     flex-direction: row;
@@ -62,7 +65,7 @@ body{
     /* border-radius: .6rem; */
     background-color: rgb(31, 35, 31);
 }
-.footerText{
+footer{
     text-align: end;
     position: fixed;
     bottom: 0;
@@ -71,6 +74,10 @@ body{
     background-color: rgba(240, 248, 255, 0.163);
     padding-block: 15px;
     color: aliceblue;
+}
+.footerText{
+    position: fixed;
+    left: -20px;
     padding-right: 20px;
 }
 button {
@@ -104,6 +111,7 @@ button span:hover {
   transition: all 0.5s;
   transform: translate(0, 0.4em);
   box-shadow: 0 0 0 0 #fff;
+  cursor: url();
 }
 
 button span:not(hover) {
@@ -116,5 +124,9 @@ button span:not(hover) {
     .buttons {
         display: flex;
         flex-direction: column;
+    }
+    #headerText{
+        letter-spacing: normal;
+        font-size: 2rem;
     }
 }
